...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/tournament_upvote_button"
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/fui_transparent"
                        android:contentDescription="@string/upvote"
                        android:scaleType="fitCenter"
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="0" />

                    <ImageButton
                        android:id="@+id/tournament_downvote_button"
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"
                        android:background="@color/fui_transparent"
                        android:contentDescription="@string/downvote"
                        android:src="@drawable/ic_arrow_downward"
...
